# ConcertistaMidi

./: .gitignore  CMakeLists.txt  LEEME.md  Requerimientos.txt
codigo/: CMakeLists.txt  controlador_juego.c++  controlador_juego.h++  fps.c++  fps.h++  octava.c++  pantalla.h++  pista.h++  principal.c++  raton.c++  raton.h++  registro.c++  registro.h++  teclas.h++  version.h++
codigo/archivos/: CMakeLists.txt  archivo.c++  archivo.h++  imagen_tga.c++  imagen_tga.h++
codigo/control/: CMakeLists.txt  base_de_datos.c++  base_de_datos.h++  configuracion.c++  configuracion.h++  datos_archivos.c++  datos_archivos.h++  datos_musica.c++  datos_musica.h++  nota_activa.h++  pista.c++  pista.h++  teclado.c++  teclado.h++  teclado_configuracion.c++  teclado_configuracion.h++  teclado_organo.c++  teclado_organo.h++  tipo_teclados.c++  tipo_teclados.h++
codigo/dispositivos/: CMakeLists.txt  pantalla.c++  pantalla.h++  raton.c++  raton.h++  teclado.c++  teclado.h++  teclas.h++
codigo/elementos/: CMakeLists.txt  boton.c++  boton.h++  elemento.h++  funciones.h++  nota.c++  nota.h++  octava.c++  octava.h++  organo.c++  organo.h++  pista.h++  tablero_notas.c++  tablero_notas.h++  tipo_teclado.h++  tipo_teclados.h++
codigo/elementos_graficos/: CMakeLists.txt  barra_desplazamiento.c++  barra_desplazamiento.h++  barra_progreso.c++  barra_progreso.h++  boton.c++  boton.h++  casilla_verificacion.c++  casilla_verificacion.h++  configuracion_pista.c++  configuracion_pista.h++  elemento.c++  elemento.h++  entrada_texto.c++  entrada_texto.h++  etiqueta.c++  etiqueta.h++  fila.c++  fila.h++  lista_desplegable.c++  lista_desplegable.h++  lista_opciones.c++  lista_opciones.h++  notificacion.c++  notificacion.h++  organo.c++  organo.h++  panel_desplazamiento.c++  panel_desplazamiento.h++  panel_solapa.c++  panel_solapa.h++  puntuacion.c++  puntuacion.h++  ruta_exploracion.c++  ruta_exploracion.h++  selector_archivos.c++  selector_archivos.h++  solapa.c++  solapa.h++  tabla.c++  (+5 more)
codigo/libmidi/: CMakeLists.txt  Midi.c++  Midi.h  Midi.h++  MidiComm.c++  MidiComm.h  MidiComm.h++  MidiEvent.c++  MidiEvent.h  MidiEvent.h++  MidiTrack.c++  MidiTrack.h  MidiTrack.h++  MidiTypes.h  MidiUtil.c++  MidiUtil.h++  Note.h  Note.h++
codigo/recursos/: CMakeLists.txt  administrador_recursos.c++  administrador_recursos.h++  color.c++  color.h++  figura.c++  figura.h++  generador_particulas.c++  generador_particulas.h++  particula.c++  particula.h++  rectangulo.c++  rectangulo.h++  sombreador.c++  sombreador.h++  texto.c++  texto.h++  textura_2d.c++  textura_2d.h++  tipografia.c++  tipografia.h++
codigo/util/: CMakeLists.txt  funciones.c++  funciones.h++  octava.c++  octava.h++  texto.c++  texto.h++  usuario.c++  usuario.h++
codigo/ventanas/: CMakeLists.txt  ventana.c++  ventana.h++  ventana_configuracion.c++  ventana_configuracion.h++  ventana_organo.c++  ventana_organo.h++  ventana_seleccion_midi.c++  ventana_seleccion_midi.h++  ventana_seleccion_musica.c++  ventana_seleccion_musica.h++  ventana_seleccion_pista.c++  ventana_seleccion_pista.h++  ventana_titulo.c++  ventana_titulo.h++
extra/: Titulo.blend
musica/: 220MElEspiritudeDios.mid  264unaentretodas.midi  272juntoatimaria.mid  272juntoatimaria.midi  275Mi almaglorificaalSenormiDios.mid  Adele - Someone Like You.midi  Ave Maria.mid  Banjo Kazooie -  Opening.midi  Banjo Kazooie -  Treasure Trove Cove.midi  Chiquitita.midi  Click Clock Wood - Sax Quartet.midi  Click Clock Wood - Winter.midi  Como no creer en Dios.mid  Danos un corazon.midi  Dios esta aqui.mid  Dios esta aqui.midi  El alfarero.mid  Escala_musícal.midi  Freezeezy Peak.midi  Himno de Chile.midi  Juntos como hermanos.mid  La_Partida.midi  Leave it all to me.midi  Maria mirame (midi).mid  Pescador de hombres.mid  Por que te vas.midi  SantaMariadelCamino.midi  Santo.mid  Spiral_Mountain_Banjo-Kazooie.midi  Una espiga.mid  Ven Señor no tardes propia.midi  Venid_y_vamos_todos.midi  chiuchiu.midi  lagos.midi  zoey 101.midi
musica/Ejemplos/: marcha_entrada.mid  marcha_final.mid
sombreadores/: particula_sf.glsl  particula_sv.glsl  rectangulo_sf.glsl  rectangulo_sin_textura_sf.glsl  rectangulo_sin_textura_sv.glsl  rectangulo_sv.glsl  rectangulo_textura_sf.glsl  rectangulo_textura_sv.glsl  texto_sf.glsl  texto_sv.glsl
texturas/: 1casilla_verificacion_sombra.tga  aprender.tga  barra.tga  borde_organo_negro.tga  borde_organo_rojo.tga  boton.tga  caraincreible.tga  casilla_verificacion_activa.tga  casilla_verificacion_inactiva.tga  casilla_verificacion_sombra.tga  circulo.tga  color_1.tga  color_2.tga  color_3.tga  color_4.tga  color_5.tga  color_6.tga  color_7.tga  color_8.tga  color_9.tga  color_invisible.tga  configuracion_pista.tga  contenedor.tga  fondo_titulo.tga  frente_barra_progreso.tga  mano_derecha.tga  mano_izquierda.tga  musica_fondo.tga  nota.tga  nota_blanca.tga  nota_negra.tga  nota_resaltada.tga  particula_nota.tga  pausar.tga  reproducir.tga  sombra.tga  sombra_nota.tga  sonido_activado.tga  sonido_desactivado.tga  tecla_blanca.tga  (+7 more)
