add_subdirectory(archivos)
add_subdirectory(elementos)
add_subdirectory(libmidi)
add_subdirectory(recursos)
add_subdirectory(ventanas)

set(codigo
	${archivos}
	${elementos}
	${libmidi}
	${recursos}
	${ventanas}
	${CMAKE_CURRENT_SOURCE_DIR}/principal.c++
	${CMAKE_CURRENT_SOURCE_DIR}/pista.c++
	${CMAKE_CURRENT_SOURCE_DIR}/nota.c++
	${CMAKE_CURRENT_SOURCE_DIR}/controlador_juego.c++
	${CMAKE_CURRENT_SOURCE_DIR}/pantalla.c++
	${CMAKE_CURRENT_SOURCE_DIR}/raton.c++
	${CMAKE_CURRENT_SOURCE_DIR}/fps.c++
	${CMAKE_CURRENT_SOURCE_DIR}/registro.c++
	PARENT_SCOPE
)
